--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
+
+set(CMAKE_CXX_COMPILER CC)
 cmake_minimum_required(VERSION 3.3)
 project(Inferno VERSION 1.0.0 LANGUAGES CXX CUDA)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD 17)
